force-app/main/default/objects/Package_Booking__c/Package_Booking__c.object-meta.xml
<CustomObject>
    <label>Package Booking</label>
    <nameField>
        <displayFormat>PAC-{0000}</displayFormat>
        <label>Package Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>