force-app/main/default/objects/Package_Booking__c/fields/Direct_Flight__c.field-meta.xml
<CustomField>
    <fullName>Direct_Flight__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Package Booking Direct Flight</description>
    <label>Direct Flight</label>
    <type>Checkbox</type>
</CustomField>