force-app/main/default/objects/Package_Booking__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Package Booking Flight</description>
    <label>Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Package Bookings</relationshipLabel>
    <relationshipName>Package_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>