force-app/main/default/objects/Package_Booking__c/fields/Hotel__c.field-meta.xml
<CustomField>
    <fullName>Hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Package Booking Hotel</description>
    <label>Hotel</label>
    <referenceTo>HotelListing__c</referenceTo>
    <relationshipLabel>Package Bookings</relationshipLabel>
    <relationshipName>Package_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>