force-app/main/default/objects/Package_Booking__c/fields/Layover_Details__c.field-meta.xml
<CustomField>
    <fullName>Layover_Details__c</fullName>
    <description>Layover Details of Package Booking</description>
    <label>Layover Details</label>
    <type>TextArea</type>
</CustomField>