force-app/main/default/objects/Package_Booking__c/fields/Number_Of_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Rooms__c</fullName>
    <description>Rooms of Hotels</description>
    <label>Number Of Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>