force-app/main/default/objects/Package_Booking__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Package</description>
    <label>Package</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Package Bookings</relationshipLabel>
    <relationshipName>Package_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>